deployment/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: findit
spec:
  selector:
    matchLabels:
      app: findit
      role: backend
  replicas: 1
  template:
    metadata:
      name: findit-api-deployment
      labels:
        app: findit
        role: backend
        env: develop
    spec:
      containers:
      - name: findit
        image: gcr.io/gcr-project/sample:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
     #   readinessProbe:
      #    httpGet:
       #     path: /
        #    port: 5000
         # timeoutSeconds: 15
        ports:
        - name: findit-port
