deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: findit-service
  labels: 
    app: aspnetcore
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: aspnetcore
